[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["whdgk7176"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"